--- a/ArbolitoU/UI/MainWindow.xaml
+++ b/ArbolitoU/UI/MainWindow.xaml
@@ -1,45 +1,107 @@
 ﻿<ui:FluentWindow
-        xmlns:ui="http://schemas.lepo.co/wpfui/2022/xaml"
-        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        Background="Gray"
-        ResizeMode="NoResize"
-        ExtendsContentIntoTitleBar="True"
-        WindowBackdropType="Mica"
-        WindowCornerPreference="Round"
-        WindowStartupLocation="CenterScreen"
-        xmlns:local="clr-namespace:ArbolitoU"
-        mc:Ignorable="d"
-        Title="MainWindow" Height="720" Width="1280">
+    x:Class="ArbolitoU.UI.MainWindow"
+    xmlns:ui="http://schemas.lepo.co/wpfui/2022/xaml"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    Background="Gray"
+    ResizeMode="NoResize"
+    ExtendsContentIntoTitleBar="True"
+    WindowBackdropType="Mica"
+    WindowCornerPreference="Round"
+    WindowStartupLocation="CenterScreen"
+    mc:Ignorable="d"
+    Title="ArbolitoU" Height="720" Width="1280">
     <Grid>
         <Grid.RowDefinitions>
-            <RowDefinition Height="Auto"/>
-            <RowDefinition Height="1*"/>
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="*" />
+            <RowDefinition Height="Auto" />
         </Grid.RowDefinitions>
-        <ui:TitleBar Title="ArbolitoU" >
-        </ui:TitleBar>
-        <Grid VerticalAlignment="Top" Height="55" Grid.Row="1">
+        <ui:TitleBar Title="ArbolitoU" />
+        <Grid Row="1">
             <Menu>
-                <ui:MenuItem Header="File" SymbolIcon="Folder24">
-                    <MenuItem Header="Open File(s)"/>
-                    <MenuItem Header="Exit"/>
+                <ui:MenuItem Header="File" SymbolIcon="Open24">
+                    <MenuItem Header="Open Folder(s)">
+                        <MenuItem.Icon>
+                            <ui:SymbolIcon Symbol="Archive32" />
+                        </MenuItem.Icon>
+                        <MenuItem Header="Select YMAP(s)" Click="SelectYmapClick">
+                            <MenuItem.Icon>
+                                <ui:SymbolIcon Symbol="Map20" />
+                            </MenuItem.Icon>
+                        </MenuItem>
+                        <MenuItem Header="Select YTYP(s)">
+                            <MenuItem.Icon>
+                                <ui:SymbolIcon Symbol="BuildingFactory28" />
+                            </MenuItem.Icon>
+                        </MenuItem>
+                        <MenuItem Header="Select Train Track(s)">
+                            <MenuItem.Icon>
+                                <ui:SymbolIcon Symbol="DriveTrain24" />
+                            </MenuItem.Icon>
+                        </MenuItem>
+                        <MenuItem Header="Select YNV(s)">
+                            <MenuItem.Icon>
+                                <ui:SymbolIcon Symbol="Location24" />
+                            </MenuItem.Icon>
+                        </MenuItem>
+                    </MenuItem>
+                    <Separator />
+                    <MenuItem Header="Exit" Click="ExitClick">
+                        <MenuItem.Icon>
+                            <ui:SymbolIcon Symbol="ArrowExit20" />
+                        </MenuItem.Icon>
+                    </MenuItem>
                 </ui:MenuItem>
-                <ui:MenuItem Header="Help" SymbolIcon="ChatHelp24"> 
+                <ui:MenuItem Header="Help" SymbolIcon="ChatHelp24">
                     <MenuItem Header="Report Bug">
                         <MenuItem.Icon>
-                            <ui:SymbolIcon Symbol="Box24"/>
+                            <ui:SymbolIcon Symbol="Bug24" />
                         </MenuItem.Icon>
                     </MenuItem>
                     <MenuItem Header="About">
                         <MenuItem.Icon>
-                            <ui:SymbolIcon Symbol="BookQuestionMark24"/>
+                            <ui:SymbolIcon Symbol="BookQuestionMark24" />
                         </MenuItem.Icon>
                     </MenuItem>
                 </ui:MenuItem>
             </Menu>
         </Grid>
+        <Grid Row="2">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="Auto" />
+                <ColumnDefinition Width="*" />
+            </Grid.ColumnDefinitions>
+            <Grid>
+                <StackPanel Orientation="Vertical">
+                    <ui:NavigationView PaneDisplayMode="LeftFluent">
+                        <ui:NavigationView.MenuItems>
+                            <ui:NavigationViewItem Content="Home">
+                                <ui:NavigationViewItem.Icon>
+                                    <ui:SymbolIcon Symbol="Home28" />
+                                </ui:NavigationViewItem.Icon>
+                            </ui:NavigationViewItem>
+                            <ui:NavigationViewItem Command="GoToPage" Content="Settings">
+                                <ui:NavigationViewItem.Icon>
+                                    <ui:SymbolIcon Symbol="Settings28" />
+                                </ui:NavigationViewItem.Icon>
+                            </ui:NavigationViewItem>
+                        </ui:NavigationView.MenuItems>
+                    </ui:NavigationView>
+                    <Separator />
+                    <TreeView>
+                        <TreeViewItem Header="Map Tools" />
+                    </TreeView>
+                </StackPanel>
+
+            </Grid>
+            <Grid Column="1" Background="Aqua" />
+        </Grid>
+        <Grid Height="50" Row="3">
+            <Label HorizontalAlignment="Center" VerticalContentAlignment="Center" Content="FOOTER" />
+        </Grid>
     </Grid>
-    
 </ui:FluentWindow>
