--- a/ArbolitoU/Pages/MapTools/YMAP/YmapSplitter.xaml
+++ b/ArbolitoU/Pages/MapTools/YMAP/YmapSplitter.xaml
@@ -3,10 +3,9 @@
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-      xmlns:local="clr-namespace:ArbolitoU.Pages.Map_Tools.YMAP"
       mc:Ignorable="d"
-      Title="YmapSplitter" Height="450" Width="800">
-    <Grid>
-        
+      Title="YmapSplitter" Height="Auto" Width="800">
+    <Grid Background="Transparent">
+        <Label Content="TESTING PAGE" Foreground="Black" FontSize="100" />
     </Grid>
 </Page>
