--- a/ArbolitoU/UI/MainWindow.xaml
+++ b/ArbolitoU/UI/MainWindow.xaml
@@ -3,6 +3,7 @@
     xmlns:ui="http://schemas.lepo.co/wpfui/2022/xaml"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:MapTools="clr-namespace:ArbolitoU.Pages.Map_Tools"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     Background="Gray"
@@ -70,35 +71,72 @@
                 </ui:MenuItem>
             </Menu>
         </Grid>
-        <Grid Row="2">
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="Auto" />
-                <ColumnDefinition Width="*" />
-            </Grid.ColumnDefinitions>
+        <Grid Margin="1" Row="2">
             <Grid>
-                <StackPanel Orientation="Vertical">
-                    <ui:NavigationView PaneDisplayMode="LeftFluent">
-                        <ui:NavigationView.MenuItems>
-                            <ui:NavigationViewItem Content="Home">
-                                <ui:NavigationViewItem.Icon>
-                                    <ui:SymbolIcon Symbol="Home28" />
-                                </ui:NavigationViewItem.Icon>
-                            </ui:NavigationViewItem>
-                            <ui:NavigationViewItem Command="GoToPage" Content="Settings">
-                                <ui:NavigationViewItem.Icon>
-                                    <ui:SymbolIcon Symbol="Settings28" />
-                                </ui:NavigationViewItem.Icon>
-                            </ui:NavigationViewItem>
-                        </ui:NavigationView.MenuItems>
-                    </ui:NavigationView>
-                    <Separator />
-                    <TreeView>
-                        <TreeViewItem Header="Map Tools" />
-                    </TreeView>
-                </StackPanel>
-
+                <ui:NavigationView PaneDisplayMode="Left" HeaderVisibility="Hidden"  IsBackButtonVisible="Collapsed" FlowDirection="LeftToRight">
+                    <ui:NavigationView.AutoSuggestBox>
+                        <ui:AutoSuggestBox PlaceholderText="Search"></ui:AutoSuggestBox>
+                    </ui:NavigationView.AutoSuggestBox>
+                    <ui:NavigationView.MenuItems>
+                        <ui:NavigationViewItem Content="Home">
+                            <ui:NavigationViewItem.Icon>
+                                <ui:SymbolIcon Symbol="Home24" Filled="True" />
+                            </ui:NavigationViewItem.Icon>
+                        </ui:NavigationViewItem>
+                        <ui:NavigationViewItem Content="Settings" TargetPageType="{x:Type MapTools:YMAP.YmapSplitter}">
+                            <ui:NavigationViewItem.Icon>
+                                <ui:SymbolIcon Symbol="Settings24" Filled="True" />
+                            </ui:NavigationViewItem.Icon>
+                        </ui:NavigationViewItem>
+                        <Separator />
+                        <Label Margin="7,5,0,0" FontSize="16" Content="Map Tools"/>
+                        <ui:NavigationViewItem Content="YMAP Tools">
+                            <ui:NavigationViewItem.Icon>
+                                <ui:SymbolIcon Symbol="Map20" Filled="True" />
+                            </ui:NavigationViewItem.Icon>
+                            <ui:NavigationViewItem.MenuItems>
+                                <ui:NavigationViewItem Content="Splitter"/>
+                                <ui:NavigationViewItem Content="Merger"/>
+                                <ui:NavigationViewItem Content="Prop Replacer"/>
+                            </ui:NavigationViewItem.MenuItems>
+                        </ui:NavigationViewItem>
+                        <ui:NavigationViewItem Content="YTYP Tools">
+                            <ui:NavigationViewItem.Icon>
+                                <ui:SymbolIcon Symbol="Map20" Filled="True" />
+                            </ui:NavigationViewItem.Icon>
+                        </ui:NavigationViewItem>
+                        <ui:NavigationViewItem Content="Train Tracks Tools">
+                            <ui:NavigationViewItem.Icon>
+                                <ui:SymbolIcon Symbol="DriveTrain24" Filled="True" />
+                            </ui:NavigationViewItem.Icon>
+                            <ui:NavigationViewItem.MenuItems>
+                                <ui:NavigationViewItem Content="Mover"/>
+                            </ui:NavigationViewItem.MenuItems>
+                        </ui:NavigationViewItem>
+                        <ui:NavigationViewItem Content="NavMesh Tools">
+                            <ui:NavigationViewItem.Icon>
+                                <ui:SymbolIcon Symbol="Accessibility24" Filled="True" />
+                            </ui:NavigationViewItem.Icon>
+                            <ui:NavigationViewItem.MenuItems>
+                                <ui:NavigationViewItem Content="YNV to ONV"/>
+                            </ui:NavigationViewItem.MenuItems>
+                        </ui:NavigationViewItem>
+                        <ui:NavigationViewItem Content="FiveM Tools">
+                            <ui:NavigationViewItem.Icon>
+                                <ui:SymbolIcon Symbol="NumberCircle524" Filled="True" />
+                            </ui:NavigationViewItem.Icon>
+                            <ui:NavigationViewItem.MenuItems>
+                                <ui:NavigationViewItem Content="Resource Checker"/>
+                                <ui:NavigationViewItem Content="Cache Cleaner"/>
+                            </ui:NavigationViewItem.MenuItems>
+                        </ui:NavigationViewItem>
+                    </ui:NavigationView.MenuItems>
+                    <ui:NavigationView.ContentOverlay>
+                        <Grid>
+                        </Grid>
+                    </ui:NavigationView.ContentOverlay>
+                </ui:NavigationView>
             </Grid>
-            <Grid Column="1" Background="Aqua" />
         </Grid>
         <Grid Height="50" Row="3">
             <Label HorizontalAlignment="Center" VerticalContentAlignment="Center" Content="FOOTER" />
