--- a/ArbolitoU/Pages/MapTools/YTYP/Page1.xaml
+++ b/ArbolitoU/Pages/MapTools/YTYP/Page1.xaml
@@ -1,4 +1,5 @@
 ﻿<Page x:Class="ArbolitoU.Pages.Map_Tools.YTYP.Page1"
+      xmlns:ui="http://schemas.lepo.co/wpfui/2022/xaml"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
