--- a/ArbolitoU/UI/MainWindow.xaml
+++ b/ArbolitoU/UI/MainWindow.xaml
@@ -1,12 +1,17 @@
 ﻿<ui:FluentWindow
     x:Class="ArbolitoU.UI.MainWindow"
+    Loaded="MainWindow_OnLoaded"
+    CacheMode="BitmapCache"
     xmlns:ui="http://schemas.lepo.co/wpfui/2022/xaml"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:MapTools="clr-namespace:ArbolitoU.Pages.Map_Tools"
+    xmlns:mapTools="clr-namespace:ArbolitoU.Pages.Map_Tools"
+    xmlns:menuStuff="clr-namespace:ArbolitoU.Pages.Menu"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    Background="Gray"
+    ui:Design.Background="{DynamicResource ApplicationBackgroundBrush}"
+    ui:Design.Foreground="{DynamicResource TextFillColorPrimaryBrush}"
+    Foreground="{DynamicResource TextFillColorPrimaryBrush}"
     ResizeMode="NoResize"
     ExtendsContentIntoTitleBar="True"
     WindowBackdropType="Mica"
@@ -23,7 +28,7 @@
         </Grid.RowDefinitions>
         <ui:TitleBar Title="ArbolitoU" />
         <Grid Row="1">
-            <Menu>
+            <Menu Background="Transparent">
                 <ui:MenuItem Header="File" SymbolIcon="Open24">
                     <MenuItem Header="Open Folder(s)">
                         <MenuItem.Icon>
@@ -57,6 +62,7 @@
                         </MenuItem.Icon>
                     </MenuItem>
                 </ui:MenuItem>
+                <Separator></Separator>
                 <ui:MenuItem Header="Help" SymbolIcon="ChatHelp24">
                     <MenuItem Header="Report Bug">
                         <MenuItem.Icon>
@@ -73,22 +79,22 @@
         </Grid>
         <Grid Margin="1" Row="2">
             <Grid>
-                <ui:NavigationView PaneDisplayMode="Left" HeaderVisibility="Hidden"  IsBackButtonVisible="Collapsed" FlowDirection="LeftToRight">
+                <ui:NavigationView IsBackButtonVisible="Collapsed" Loaded="ArbolitoNavigation_OnLoaded" x:Name="ArbolitoNavigation" PaneDisplayMode="Left" FlowDirection="LeftToRight">
                     <ui:NavigationView.AutoSuggestBox>
-                        <ui:AutoSuggestBox PlaceholderText="Search"></ui:AutoSuggestBox>
+                        <ui:AutoSuggestBox PlaceholderText="Search" Margin="8"/>
                     </ui:NavigationView.AutoSuggestBox>
-                    <ui:NavigationView.MenuItems>
-                        <ui:NavigationViewItem Content="Home">
+                    <ui:NavigationView.MenuItems>   
+                        <ui:NavigationViewItem Content="Home" TargetPageType="{x:Type menuStuff:Home}">
                             <ui:NavigationViewItem.Icon>
                                 <ui:SymbolIcon Symbol="Home24" Filled="True" />
                             </ui:NavigationViewItem.Icon>
                         </ui:NavigationViewItem>
-                        <ui:NavigationViewItem Content="Settings" TargetPageType="{x:Type MapTools:YMAP.YmapSplitter}">
+                        <ui:NavigationViewItem Content="Settings" TargetPageType="{x:Type menuStuff:Settings}">
                             <ui:NavigationViewItem.Icon>
                                 <ui:SymbolIcon Symbol="Settings24" Filled="True" />
                             </ui:NavigationViewItem.Icon>
                         </ui:NavigationViewItem>
-                        <Separator />
+                        <ui:NavigationViewItemSeparator/>
                         <Label Margin="7,5,0,0" FontSize="16" Content="Map Tools"/>
                         <ui:NavigationViewItem Content="YMAP Tools">
                             <ui:NavigationViewItem.Icon>
@@ -121,6 +127,9 @@
                                 <ui:NavigationViewItem Content="YNV to ONV"/>
                             </ui:NavigationViewItem.MenuItems>
                         </ui:NavigationViewItem>
+                        <ui:NavigationViewItemSeparator></ui:NavigationViewItemSeparator>
+                        <Label Margin="7,5,0,0" FontSize="16" Content="Misc Tools"/>
+
                         <ui:NavigationViewItem Content="FiveM Tools">
                             <ui:NavigationViewItem.Icon>
                                 <ui:SymbolIcon Symbol="NumberCircle524" Filled="True" />
@@ -132,14 +141,14 @@
                         </ui:NavigationViewItem>
                     </ui:NavigationView.MenuItems>
                     <ui:NavigationView.ContentOverlay>
-                        <Grid>
+                        <Grid x:Name="PageGrid">
                         </Grid>
                     </ui:NavigationView.ContentOverlay>
                 </ui:NavigationView>
             </Grid>
         </Grid>
         <Grid Height="50" Row="3">
-            <Label HorizontalAlignment="Center" VerticalContentAlignment="Center" Content="FOOTER" />
+            <Label HorizontalAlignment="Left" Margin="10" VerticalContentAlignment="Center" Content="ArbolitoU by MrVicho13" />
         </Grid>
     </Grid>
 </ui:FluentWindow>
