--- a/ArbolitoU/Pages/MapTools/YMAP/YmapSplitter.xaml
+++ b/ArbolitoU/Pages/MapTools/YMAP/YmapSplitter.xaml
@@ -4,9 +4,16 @@
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+      ui:Design.Background="{DynamicResource ApplicationBackgroundBrush}"
+      ui:Design.Foreground="{DynamicResource TextFillColorPrimaryBrush}"
+      Foreground="{DynamicResource TextFillColorPrimaryBrush}"
       mc:Ignorable="d"
       Title="YmapSplitter" Height="570" Width="960">
-    <Grid Margin="30" Background="Transparent">
-        <Label Content="TESTING PAGE" Foreground="Black" FontSize="100" />
+    <Grid Margin="20">
+        <StackPanel HorizontalAlignment="Left">
+            <TextBlock Margin="5" Text="Separate by"></TextBlock>
+            <ComboBox SelectedIndex="0" Margin="5" x:Name="cbSeparateBy" Width="200"/>
+            <ui:Button Appearance="Primary" Content="Split" Icon="ArrowSplit24" Margin="5"/>
+        </StackPanel>
     </Grid>
 </Page>
