--- a/ArbolitoU/Pages/Menu/Settings.xaml
+++ b/ArbolitoU/Pages/Menu/Settings.xaml
@@ -10,29 +10,30 @@
       xmlns:local="clr-namespace:ArbolitoU.Pages.Menu"
       mc:Ignorable="d"
       Height="570" Width="960">
-    <Grid Margin="30">
-        <StackPanel>
-            <TextBlock FontSize="20" FontWeight="Medium" Text="Settings"/>
-            <TextBlock Margin="0, 12,0,0" Text="Theme"/>
-            <RadioButton Checked="RbLight_OnChecked" x:Name="rbLight" Margin="0,12,0,0" Content="Light" GroupName="themeSelect"/>
-            <RadioButton Checked="RbDark_OnChecked" x:Name="rbDark" Margin="0,8,0,0" Content="Dark" GroupName="themeSelect"/>
-            <TextBlock Margin="0,24,0,0" Text="Paths"/>
-            <StackPanel Margin="0,16,0,0" Orientation="Horizontal">
-                <ui:TextBox x:Name="tbOutputFolder" PlaceholderText="Output Folder"  Width="400" MaxLines="1" />
-                <ui:Button x:Name="btnBrowseOutput" Click="BtnBrowseOutput_OnClick" Margin="10,0" Height="35" Icon="Search24" Appearance="Primary"/>
+    <Grid Margin="20">
+        <ui:DynamicScrollViewer Height="450" VerticalAlignment="Top" VerticalScrollBarVisibility="Auto" IsScrollingVertically="True" IsScrollingHorizontally="False">
+            <StackPanel>
+                <TextBlock FontSize="20" FontWeight="Medium" Text="Settings"/>
+                <TextBlock Margin="0, 12,0,0" Text="Theme"/>
+                <RadioButton Checked="RbLight_OnChecked" x:Name="rbLight" Margin="0,12,0,0" Content="Light" GroupName="themeSelect"/>
+                <RadioButton Checked="RbDark_OnChecked" x:Name="rbDark" Margin="0,8,0,0" Content="Dark" GroupName="themeSelect"/>
+                <TextBlock Margin="0,24,0,0" Text="Paths"/>
+                <StackPanel Margin="0,16,0,0" Orientation="Horizontal">
+                    <ui:TextBox x:Name="tbOutputFolder" PlaceholderText="Output Folder"  Width="400" MaxLines="1" />
+                    <ui:Button x:Name="btnBrowseOutput" Click="BtnBrowseOutput_OnClick" Margin="10,0" Height="35" Icon="Search24" Appearance="Primary"/>
+                </StackPanel>
+                <StackPanel Margin="0,16,0,0" Orientation="Horizontal">
+                    <ui:TextBox x:Name="tbGTAVPath" PlaceholderText="Grand Theft Auto V"  Width="400" MaxLines="1" />
+                    <ui:Button x:Name="btnBrowseGTAVPath" Click="BtnBrowseGTAVPath_OnClick" Margin="10,0" Height="35" Icon="Search24" Appearance="Primary"/>
+                </StackPanel>
+                <TextBlock Margin="0,24,0,0" Text="Gamefiles loading"/>
+                <StackPanel Orientation="Horizontal" Margin="0,16,0,0">
+                    <CheckBox x:Name="cbEnableMods" Content="Enable Mods"/>
+                    <CheckBox x:Name="cbEnableDLCs" Content="Enable DLCs"/>
+                </StackPanel>
             </StackPanel>
-            <StackPanel Margin="0,16,0,0" Orientation="Horizontal">
-                <ui:TextBox x:Name="tbGTAVPath" PlaceholderText="Grand Theft Auto V"  Width="400" MaxLines="1" />
-                <ui:Button x:Name="btnBrowseGTAVPath" Click="BtnBrowseGTAVPath_OnClick" Margin="10,0" Height="35" Icon="Search24" Appearance="Primary"/>
-            </StackPanel>
-            <TextBlock Margin="0,24,0,0" Text="Gamefiles loading"/>
-            <StackPanel Orientation="Horizontal" Margin="0,16,0,0">
-                <CheckBox x:Name="cbEnableMods" Content="Enable Mods"/>
-                <CheckBox x:Name="cbEnableDLCs" Content="Enable DLCs"/>
-            </StackPanel>
-
-        </StackPanel>
-        <StackPanel Orientation="Horizontal" Margin="5" HorizontalAlignment="Right">
+        </ui:DynamicScrollViewer>
+        <StackPanel Orientation="Horizontal" VerticalAlignment="Bottom" HorizontalAlignment="Right">
             <ui:Button x:Name="btnDefaultSettings" Margin="5" FontWeight="Medium" Click="BtnDefaultSettings_OnClick" HorizontalAlignment="Right" Content="Reset Settings" Appearance="Primary" Icon="ArrowReset48" VerticalAlignment="Bottom"/>
             <ui:Button x:Name="btnSaveSettings" Margin="5" FontWeight="Medium" Click="BtnSaveSettings_OnClick" HorizontalAlignment="Right" Content="Save Settings" Appearance="Primary" Icon="Save20" IconFilled="True" VerticalAlignment="Bottom"/>
         </StackPanel>
