--- a/ArbolitoU/UI/MainWindow.xaml
+++ b/ArbolitoU/UI/MainWindow.xaml
@@ -1,7 +1,6 @@
 ﻿<ui:FluentWindow
     x:Class="ArbolitoU.UI.MainWindow"
     Loaded="MainWindow_OnLoaded"
-    CacheMode="BitmapCache"
     xmlns:ui="http://schemas.lepo.co/wpfui/2022/xaml"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
@@ -39,17 +38,17 @@
                                 <ui:SymbolIcon Symbol="Map20" />
                             </MenuItem.Icon>
                         </MenuItem>
-                        <MenuItem Header="Select YTYP(s)">
+                        <MenuItem Header="Select YTYP(s)" Click="SelectYtypClick">
                             <MenuItem.Icon>
                                 <ui:SymbolIcon Symbol="BuildingFactory28" />
                             </MenuItem.Icon>
                         </MenuItem>
-                        <MenuItem Header="Select Train Track(s)">
+                        <MenuItem Header="Select Train Track(s)" Click="SelectTrainsClick">
                             <MenuItem.Icon>
                                 <ui:SymbolIcon Symbol="DriveTrain24" />
                             </MenuItem.Icon>
                         </MenuItem>
-                        <MenuItem Header="Select YNV(s)">
+                        <MenuItem Header="Select YNV(s)" Click="SelectYnvClick">
                             <MenuItem.Icon>
                                 <ui:SymbolIcon Symbol="Location24" />
                             </MenuItem.Icon>
@@ -79,7 +78,7 @@
         </Grid>
         <Grid Margin="1" Row="2">
             <Grid>
-                <ui:NavigationView IsBackButtonVisible="Collapsed" Loaded="ArbolitoNavigation_OnLoaded" x:Name="ArbolitoNavigation" PaneDisplayMode="Left" FlowDirection="LeftToRight">
+                <ui:NavigationView IsPaneToggleVisible="False" IsBackButtonVisible="Collapsed" Loaded="ArbolitoNavigation_OnLoaded" x:Name="ArbolitoNavigation" PaneDisplayMode="Left" FlowDirection="LeftToRight">
                     <ui:NavigationView.AutoSuggestBox>
                         <ui:AutoSuggestBox PlaceholderText="Search" Margin="8"/>
                     </ui:NavigationView.AutoSuggestBox>
@@ -101,7 +100,7 @@
                                 <ui:SymbolIcon Symbol="Map20" Filled="True" />
                             </ui:NavigationViewItem.Icon>
                             <ui:NavigationViewItem.MenuItems>
-                                <ui:NavigationViewItem Content="Splitter"/>
+                                <ui:NavigationViewItem Content="Splitter" TargetPageType="{x:Type mapTools:YMAP.YmapSplitter}"/>
                                 <ui:NavigationViewItem Content="Merger"/>
                                 <ui:NavigationViewItem Content="Prop Replacer"/>
                             </ui:NavigationViewItem.MenuItems>
@@ -148,7 +147,7 @@
             </Grid>
         </Grid>
         <Grid Height="50" Row="3">
-            <Label HorizontalAlignment="Left" Margin="10" VerticalContentAlignment="Center" Content="ArbolitoU by MrVicho13" />
+            <Label HorizontalAlignment="Left" Margin="20,0,0,0" VerticalContentAlignment="Center" Content="ArbolitoU by MrVicho13" />
         </Grid>
     </Grid>
 </ui:FluentWindow>
