--- a/ArbolitoU/Pages/Menu/Settings.xaml
+++ b/ArbolitoU/Pages/Menu/Settings.xaml
@@ -16,35 +16,41 @@
                 <TextBlock FontSize="20" FontWeight="Medium" Text="Settings"/>
                 <TextBlock Margin="0, 32,0,0" Text="Personalization" FontWeight="Medium" FontSize="18"/>
                 <TextBlock Margin="0, 12,0,0" Text="Theme"/>
-                <RadioButton IsEnabled="False" Checked="RbLight_OnChecked" x:Name="rbLight" Margin="0,12,0,0" Content="Light (W.I.P)" GroupName="themeSelect"/>
-                <RadioButton Checked="RbDark_OnChecked" x:Name="rbDark" Margin="0,8,0,0" Content="Dark" GroupName="themeSelect"/>
+                <RadioButton IsEnabled="False" Checked="RbLight_OnChecked" x:Name="RbLight" Margin="0,12,0,0" Content="Light (W.I.P)" GroupName="themeSelect"/>
+                <RadioButton Checked="RbDark_OnChecked" x:Name="RbDark" Margin="0,8,0,0" Content="Dark" GroupName="themeSelect"/>
                 <TextBlock Margin="0,24,0,0" Text="Paths" FontWeight="Medium" FontSize="18"/>
+                <TextBlock Margin="0, 12,0,0" Text="Game location and Output"/>
                 <StackPanel Margin="0,16,0,0" Orientation="Horizontal">
-                    <ui:TextBox x:Name="tbOutputFolder" PlaceholderText="Output Folder"  Width="400" MaxLines="1" />
-                    <ui:Button x:Name="btnBrowseOutput" Click="BtnBrowseOutput_OnClick" Margin="10,0" Height="35" Icon="Search24" Appearance="Primary"/>
+                    <ui:TextBox x:Name="TbOutputFolder" PlaceholderText="Output Folder"  Width="400" MaxLines="1" />
+                    <ui:Button x:Name="BtnBrowseOutput" Click="BtnBrowseOutput_OnClick" Margin="10,0" Height="35" Icon="Search24" Appearance="Primary"/>
                 </StackPanel>
                 <StackPanel Margin="0,16,0,0" Orientation="Horizontal">
-                    <ui:TextBox x:Name="tbGTAVPath" PlaceholderText="Grand Theft Auto V"  Width="400" MaxLines="1" />
-                    <ui:Button x:Name="btnBrowseGTAVPath" Click="BtnBrowseGTAVPath_OnClick" Margin="10,0" Height="35" Icon="Search24" Appearance="Primary"/>
+                    <ui:TextBox x:Name="TbGtavPath" PlaceholderText="Grand Theft Auto V"  Width="400" MaxLines="1" />
+                    <ui:Button x:Name="BtnBrowseGtavPath" Click="BtnBrowseGTAVPath_OnClick" Margin="10,0" Height="35" Icon="Search24" Appearance="Primary"/>
+                </StackPanel>
+                <TextBlock Margin="0, 12,0,0" Text="FiveM Tools Paths"/>
+                <StackPanel Margin="0,16,0,0" Orientation="Horizontal">
+                    <ui:TextBox x:Name="TbFXServer" PlaceholderText="Local FXServer" Width="400" MaxLines="1" />
+                    <ui:Button x:Name="BtnBrowseFXServer" Click="BtnBrowseFXServer_OnClick" Margin="10,0" Height="35" Icon="Search24" Appearance="Primary"/>
                 </StackPanel>
                 <StackPanel Margin="0,16,0,0" Orientation="Horizontal">
-                    <ui:TextBox PlaceholderText="Local FXServer" Width="400" MaxLines="1" />
-                    <ui:Button Margin="10,0" Height="35" Icon="Search24" Appearance="Primary"/>
+                    <ui:TextBox x:Name="TbFiveM" PlaceholderText="FiveM" Width="400" MaxLines="1" />
+                    <ui:Button x:Name="BtnBrowseFiveA" Click="BtnBrowseFiveM_OnClick" Margin="10,0" Height="35" Icon="Search24" Appearance="Primary"/>
                 </StackPanel>
                 <StackPanel Margin="0,16,0,0" Orientation="Horizontal">
-                    <ui:TextBox PlaceholderText="FiveM" Width="400" MaxLines="1" />
-                    <ui:Button Margin="10,0" Height="35" Icon="Search24" Appearance="Primary"/>
+                    <ui:TextBox x:Name="TbResources" PlaceholderText="Resources Output" Width="400" MaxLines="1" />
+                    <ui:Button x:Name="BtnResourceOut" Click="BtnResourceOut_OnClick" Margin="10,0" Height="35" Icon="Search24" Appearance="Primary"/>
                 </StackPanel>
-                <TextBlock Margin="0,24,0,0" Text="Gamefiles loading" FontWeight="Medium" FontSize="18"/>
+                <TextBlock Margin="0,24,0,0" Text="Gamefiles Loading" FontWeight="Medium" FontSize="18"/>
                 <StackPanel Orientation="Horizontal" Margin="0,16,0,0">
-                    <CheckBox x:Name="cbEnableMods" Content="Enable Mods"/>
-                    <CheckBox x:Name="cbEnableDLCs" Content="Enable DLCs"/>
+                    <CheckBox x:Name="CbEnableMods" Content="Enable Mods"/>
+                    <CheckBox x:Name="CbEnableDlCs" Content="Enable DLCs"/>
                 </StackPanel>
             </StackPanel>
         </ui:DynamicScrollViewer>
         <StackPanel Orientation="Horizontal" VerticalAlignment="Bottom" HorizontalAlignment="Right">
-            <ui:Button x:Name="btnDefaultSettings" Margin="5" Click="BtnDefaultSettings_OnClick" HorizontalAlignment="Right" Content="Reset Settings" Appearance="Primary" Icon="ArrowReset48" VerticalAlignment="Bottom"/>
-            <ui:Button x:Name="btnSaveSettings" Margin="5" Click="BtnSaveSettings_OnClick" HorizontalAlignment="Right" Content="Save Settings" Appearance="Primary" Icon="Save20" IconFilled="True" VerticalAlignment="Bottom"/>
+            <ui:Button x:Name="BtnDefaultSettings" Margin="5" Click="BtnDefaultSettings_OnClick" HorizontalAlignment="Right" Content="Reset Settings" Appearance="Primary" Icon="ArrowReset48" VerticalAlignment="Bottom"/>
+            <ui:Button x:Name="BtnSaveSettings" Margin="5" Click="BtnSaveSettings_OnClick" HorizontalAlignment="Right" Content="Save Settings" Appearance="Primary" Icon="Save20" IconFilled="True" VerticalAlignment="Bottom"/>
         </StackPanel>
         
     </Grid>
