--- a/ArbolitoU/App.axaml
+++ b/ArbolitoU/App.axaml
@@ -2,13 +2,8 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              x:Class="ArbolitoU.App"
              RequestedThemeVariant="Dark"
-             xmlns:sty="using:FluentAvalonia.Styling"
-             xmlns:avalonia="clr-namespace:Material.Icons.Avalonia;assembly=Material.Icons.Avalonia">
+             xmlns:sty="using:FluentAvalonia.Styling">
     <Application.Styles>
-        <FluentTheme />
-        <StyleInclude Source="avares://Semi.Avalonia/Themes/Index.axaml" />
-        <StyleInclude Source="avares://Semi.Avalonia.DataGrid/Index.axaml" />
         <sty:FluentAvaloniaTheme />
-        <avalonia:MaterialIconStyles />
     </Application.Styles>
 </Application>
